Add Windows app-image packaging